--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="intro/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <script defer src="https://static.vercel-insights.com/script.js"></script>
+
 
 </head>
 
