--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
                 <td style="padding:16px;width:100%;vertical-align:middle">
                   <h2>Research</h2>
                   <p>
-                    I'm interested in robotics, reinforcement learning, and world models. Some below
-                    are <span style="background-color: #ffffd0">highlighted</span> for emphasis.
+                    I'm interested in robotics, reinforcement learning, and world models.
                   </p>
                 </td>
               </tr>
@@ -76,7 +75,7 @@
           <table
             style="width:100%;border:0px;border-spacing:0px 4px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
-              <tr bgcolor="#ffffd0">
+              <tr>
                 <td style="padding:16px;width:20%;vertical-align:top">
                   <div class="one">
                     <img src='research/kochrl.gif' width="160">
@@ -106,7 +105,7 @@
                 <td colspan="2" style="height:10px"></td>
               </tr>
 
-              <tr bgcolor="#ffffd0">
+              <tr>
                 <td style="padding:16px;width:20%;vertical-align:top">
                   <div class="one">
                     <img src='projects/fair.png' width="160">
