change background colour

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <tr style="padding:0px">
         <td style="padding:0px">
           <table
-            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;background-color:#f0f0f0;border-radius:10px">
             <tbody>
               <tr style="padding:0px">
                 <td style="padding:2.5%;width:63%;vertical-align:middle">
@@ -87,8 +87,12 @@
                     2025</span>
                   <br>
                   <p>
-                    Motivation: current robotic arms are position controlled, unable to react to external forces while force sensors are expensive. Thus, I trained an end-to-end impedance controller with RL in Isaac Lab. The most difficult challenge was overcoming the sim-to-real gap and deploying on the physical Koch robot. 
-                    Furthermore, I developed a novel bilateral teleoperation system using servo current readings, boosting data
+                    Motivation: current robotic arms are position controlled, unable to react to external forces while
+                    force sensors are expensive. Thus, I trained an end-to-end impedance controller with RL in Isaac
+                    Lab. The most difficult challenge was overcoming the sim-to-real gap and deploying on the physical
+                    Koch robot.
+                    Furthermore, I developed a novel bilateral teleoperation system using servo current readings,
+                    boosting data
                     collection
                     by 17%.
                     The teleoperation data was then used to train a diffusion policy to allow for compliant movements
@@ -234,7 +238,9 @@
                   <span class="papertitle">UofT Aerospace Team | 2024-2025</span>
                   <br>
                   <p>
-                    In the 2024 season, the team was tasked to create a VTOL for package delivery. My contribution included creating a simulation of the landing zone with April Tags in Gazebo, simulating the drone's downward-facing camera in rviz, and passing the data to a ROS node for localization.
+                    In the 2024 season, the team was tasked to create a VTOL for package delivery. My contribution
+                    included creating a simulation of the landing zone with April Tags in Gazebo, simulating the drone's
+                    downward-facing camera in rviz, and passing the data to a ROS node for localization.
                   </p>
                 </td>
               </tr>
