--- a/index.html
+++ b/index.html
@@ -467,6 +467,16 @@
             </tbody>
           </table>
 
+          <div style="display: flex; align-items: center; justify-content: center; gap: 15px;">
+            <a href="https://WebRing.skule.ca/#https://your-website.com?nav=prev"
+              style="color: #333; text-decoration: none; font-size: 1.5rem;">←</a>
+            <a href="https://WebRing.skule.ca/#https://your-website.com" target="_blank">
+              <img src="https://WebRing.skule.ca/img/icon.svg" alt="SKULE WebRing" style="width: 32px; height: 32px;" />
+            </a>
+            <a href="https://WebRing.skule.ca/#https://your-website.com?nav=next"
+              style="color: #333; text-decoration: none; font-size: 1.5rem;">→</a>
+          </div>
+
           <table
             style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
