--- a/index.html
+++ b/index.html
@@ -175,6 +175,9 @@
                     vehicle. In my second year, I joined the Controls team and implemented MPC and pure pursuit
                     controllers.
                   </p>
+                  <p>
+                    <a href="https://fsaeutoronto.ca/">Team website</a>
+                  </p>
                 </td>
               </tr>
 
@@ -242,7 +245,36 @@
                     included creating a simulation of the landing zone with April Tags in Gazebo, simulating the drone's
                     downward-facing camera in rviz, and passing the data to a ROS node for localization.
                   </p>
+                  <p>
+                    <a href="https://www.utat.ca/uas">Team website</a>
+                  </p>
                 </td>
+              </tr>
+              <tr>
+                <td style="padding:16px;width:20%;vertical-align:top">
+                  <div class="one">
+                    <img src='projects/engsci.png' width="160">
+                  </div>
+                </td>
+                <td style="padding:8px;width:80%;vertical-align:top">
+                  <span class="papertitle">EngSci 1st year course projects | 2024-2025</span>
+                  <br>
+                  <p>
+                    As first years, we formed distinct teams for 3 different projects. In CIV102, we designed bridges
+                    made out of matboard where we optimized the cross section design using MatLab. In ESC101 - Praxis I
+                    - we created prototypes to prevent jackets from falling off chair backs. And in ESC102 - Praxis II -
+                    we devised a hive-weighing scales for beekeepers to efficiently measure honey quantity using ESP32
+                    and strain gauges.
+                  </p>
+                  <p>
+                    <a href="https://v0-praxis-ii-portfolio-661ajf7e0-eric-xies-projects-d55142d3.vercel.app/">Project
+                      Portfolio</a>
+                  </p>
+                </td>
+              </tr>
+
+              <tr>
+                <td colspan="2" style="height:20px"></td>
               </tr>
 
               <tr bgcolor="#ffffd0">
